--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 :root {
   --dark: #000;
   --course: #F4E408;
@@ -11,10 +15,7 @@ body {
   font-size: 1.5em;
   line-height: 1.5;
   margin: 0;
-}
-main {
-  max-width: 800px;
-  margin: 10vh auto;
+  padding: 0;
 }
 header {
   background: var(--course);
@@ -25,55 +26,140 @@ header {
   align-items: center;
 }
 h1 {
-  font-size: 5em;
+  font-size: 8vw;
+  letter-spacing: -0.04em;
+}
+main {
+  margin: 0;
+  padding: 1em;
 }
 h2 {
   font-size: 2em;
   margin-top: 1.5em;
 }
-ul {
-  display: flex;
-  /flex-wrap: wrap;
-  justify-content: space-between;
-  list-style-type: none;
-  padding: 0;
-  margin: 0 -1rem;
+h3 {
+  font-size: 2em;
 }
-ul li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 1rem;
+p{
+  max-width: 30em;
 }
-ul img {
-  border: 2px solid var(--light);
-  margin-top: 2em;
-  margin-bottom: 2em;
+a,
+a:visited {
+  color: var(--course);
 }
-img {
-  max-width: 100%;
+a:hover,
+a:focus {
+  background:var(--course);
+  color: var(--dark);
 }
-
-section#lecturers img {
-  border-radius: 100%;
-  margin-right: 1em;
-}
-
 .button {
   background: var(--light);
   color: var(--dark);
   padding: 1em;
 }
 
-.examples img {
-  max-width: 25vh;
+/* ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+ul img {
+  border: 0.1rem solid var(--light);
+}
+img {
+  max-width: 100%;
+} 
+*/
+
+
+/* GALLERY */
+section#gallery{ }
+ul.gallery{
+  padding: 0;
+  margin: 0;
+}
+ul.gallery li{
+  border-bottom: var(--course) solid 0.2rem;
+  padding-bottom: 2rem;
+  margin-bottom: 4rem;
+  display: inline-block;
+  vertical-align: top;
+  max-width: 20em;
+}
+ul.gallery img{
+  width: 100%;
+}
+ul.gallery li h3{
+ margin-top: 0;
 }
 
-a,
-a:visited {
-  color: var(--course);
+
+/* LECTURERS & SPEAKER */
+section#lecturers{ }
+section#speakers{ }
+section#lecturers ul, section#speakers ul{
+  width: 100%;
+  overflow-x: scroll;
+  margin: 0 -1rem;
+  padding: 1rem;
+
+  display: flex; 
+	flex-wrap: nowrap;
+	flex-direction: row;
+}
+section#lecturers li, section#speakers li{
+  flex-shrink: 0;
+  margin-right: 2rem;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+section#lecturers img {
+  border-radius: 100%;
+  /* margin-right: 1em; */
+  max-width: 12rem;
+}
+section#speakers img{
+  /* margin-right: 1em; */
+  max-width: 12rem;
 }
 
+/* FOOTER */
 footer {
   font-style: italic;
+  /* max-width: 30rem; */
 }
+
+  /* 
+  RESPONSIVE
+  */
+  @media all and (min-width: 36em) { 
+    main {
+      padding: 2em;
+    }
+    ul.gallery li{
+      max-width: 48%;
+    }
+    ul.gallery li p {
+      padding-right: 1rem;
+    }
+    section#lecturers ul, section#speakers ul{
+      margin: 0 -2rem;
+      padding: 2rem;
+    }
+  }
+  @media all and (min-width: 60em) { 
+    ul.gallery li{
+      max-width: 32%;
+    }
+  }
