--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -86,14 +86,14 @@ section#gallery{ }
 ul.gallery{
   padding: 0;
   margin: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+  grid-gap: 3rem;
 }
 ul.gallery li{
   border-bottom: var(--course) solid 0.2rem;
   padding-bottom: 2rem;
-  margin-bottom: 4rem;
-  display: inline-block;
   vertical-align: top;
-  max-width: 20em;
 }
 ul.gallery img{
   width: 100%;
@@ -147,19 +147,11 @@ footer {
     main {
       padding: 2em;
     }
-    ul.gallery li{
-      max-width: 48%;
-    }
     ul.gallery li p {
       padding-right: 1rem;
     }
     section#lecturers ul, section#speakers ul{
       margin: 0 -2rem;
       padding: 2rem;
-    }
-  }
-  @media all and (min-width: 60em) { 
-    ul.gallery li{
-      max-width: 32%;
     }
   }
